--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
 alembic==1.8.1
 aniso8601==9.0.1
+async-timeout==4.0.2
 attrs==22.1.0
 bcrypt==4.0.1
 blinker==1.5
+cachelib==0.9.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 commonmark==0.9.1
 defusedxml==0.7.1
+Deprecated==1.2.13
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
+Flask-Caching==2.0.1
 Flask-Mail==0.9.1
 Flask-Migrate==3.1.0
 flask-restx==1.0.3
@@ -23,16 +27,20 @@ jsonschema==4.17.0
 Mako==1.2.3
 MarkupSafe==2.1.1
 multidict==6.0.2
+packaging==21.3
 psycopg2==2.9.5
 Pygments==2.13.0
 PyJWT==2.6.0
+pyparsing==3.0.9
 pyrsistent==0.19.2
 PySocks==1.7.1
 python-dotenv==0.21.0
 pytz==2022.6
+redis==4.3.4
 requests==2.28.1
 requests-toolbelt==0.10.1
 rich==12.6.0
 SQLAlchemy==1.4.43
 urllib3==1.26.12
 Werkzeug==2.2.2
+wrapt==1.14.1
