--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 commonmark==0.9.1
+coverage==6.5.0
 defusedxml==0.7.1
 Deprecated==1.2.13
 exceptiongroup==1.0.4
@@ -39,6 +40,7 @@ pyparsing==3.0.9
 pyrsistent==0.19.2
 PySocks==1.7.1
 pytest==7.2.0
+pytest-cov==4.0.0
 python-dotenv==0.21.0
 pytz==2022.6
 redis==4.3.4
